fix: adjust logo position in footer for better alignment

--- a/styles/blocks/footer.scss
+++ b/styles/blocks/footer.scss
@@ -89,7 +89,7 @@
 	@include mq.from(sm) {
 		&__logo {
 			position: absolute;
-			top: -20px;
+			top: 20px;
 		}
 
 		&__top-row {
